feat: 实现 shadowDOMIsolation

--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
 </head>
 <body>
 <h1>Virtual DOM 隔离</h1>
-<div id="virtual-dom">
-  <p>虚拟DOM隔离</p>
-</div>
+<div id="shadow-dom"></div>
 
 <h1>Scoped CSS 隔离</h1>
-<div id="scoped-css">
-  <p>Scoped CSS隔离</p>
-</div>
+<div id="scoped-css"></div>
 
 <script src="scopedCSSIsolation.js"></script>
-<script src="virtualDOMIsolation.js"></script>
+<script src="shadowDOMIsolation.js"></script>
 </body>
 </html>
