--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <div id="shadow-dom"></div>
 
 <h1>Scoped CSS 隔离</h1>
-<div id="scoped-css"></div>
+<div id="scoped-css">
+</div>
+<p>额外的文本</p>
 
 <script src="scopedCSSIsolation.js"></script>
 <script src="shadowDOMIsolation.js"></script>
