--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </style>
 </head>
 <body>
+
 <h1>Shadow DOM 隔离</h1>
 <isolation-content data-app-name="Sub1" data-isolation-mode="shadowDOM">
   <p>Shadow DOM Isolation</p>
@@ -20,7 +21,8 @@
   <style>p { color: blue }</style>
   <p>Scoped CSS Isolation</p>
 </isolation-content>
-<p>额外的文本</p>
+
+<p>外部文本</p>
 
 <script src="scopedCSSIsolation.js"></script>
 <script src="shadowDOMIsolation.js"></script>
