feat: 添加紫色样例

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <h1>Shadow DOM 隔离</h1>
 <isolation-content data-app-name="Sub1" data-isolation-mode="shadowDOM">
+  <style>p { color: purple }</style>
   <p>Shadow DOM Isolation</p>
 </isolation-content>
 
